@@ -4,6 +4,7 @@
 	* If an AI dies the game completes and the UI displays "opponent has died". This is
 	  an actual tag in the PGN spec I was looking for a reason to use!!
 	* Catch exception if unable to display help (Bug #432216)
+        * Don't consider a missing autoload file an error
 
 2007-04-09  Robert Ancell  <robert.ancell@gmail.com>
 
